--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "cookie": "^0.3.1",
     "eslint-plugin-html": "1.5.1",
     "fetch-ponyfill": "1.0.0",
     "lodash": "4.13.1",
